<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/backgrounlogindark"
    tools:context=".ProfileActivity">

    <ImageView
        android:contentDescription="@string/app_name"
        android:layout_marginTop="10dp"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/s1"/>



    <ImageButton
        android:id="@+id/btnAddImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/border"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/viewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/Name"
        android:layout_weight="1"
        android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btnUpdateProfile"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="Update Profile"
            android:textColor="@android:color/white"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="#00000000"/>
    </LinearLayout>

    <TextView
        android:id="@+id/viewNick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/Nick"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/viewMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/Mobile"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:id="@+id/btnSingOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sing_out"
            android:textColor="@android:color/white"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@android:color/holo_blue_light"
            android:padding="5dp"
            style="@style/AppTheme"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btnDeleteProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_profile"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_red_light"
            android:padding="5dp"
            style="@style/AppTheme"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>