<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/cardViewProductList"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#DAE1E7"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DAE1E7"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/imageViewProductList"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/app_name"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/textViewNameProductList"
            android:src="@mipmap/sale_empty_icon" />

        <TextView
            android:id="@+id/textViewNameProductList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Title"
            android:textStyle="bold"
            android:textColor="#27496D"
            android:text="@string/producto_text" />

        <TextView
            android:id="@+id/textViewPriceProductList"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageViewProductList"
            android:gravity="end"
            android:text="@string/precio_text"
            android:layout_toStartOf="@id/coinProduct"
            android:textColor="#142850"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/coinProduct"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageViewProductList"
            android:layout_alignParentEnd="true"
            android:textColor="#142850"
            android:text="€"
            android:textStyle="bold" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>